tests/gcc-torture/breakdown/success/970214-1.c
#include "cerberus.h"
#define L 1
int
main ()
{
  exit ('1' != '1');
}
