tests/gcc-torture/breakdown/fail/internal/970214-1.c
#include "cerberus.h"
#define L 1
int 
main (void)
{
  exit (L'1' != L'1');
}
